--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mdi/js": "^7.3.67",
-    "@mui/icons-material": "^5.14.18",
-    "@mui/material": "^5.14.18",
+    "axios": "^1.6.5",
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1"
